<resources>
    <string name="app_name">Rachmawati</string>
    <string name="login">Login</string>
    <string name="masukkan_username">Masukkan Username</string>
    <string name="masukkan_password">Masukkan Password</string>
    <string name="button_Login">Login</string>
    <string name="textHome">HOME</string>
    <string name="textProfile">Profile</string>
    <string name="textAboutMe">About Me</string>
    <string name="textContact">Contact</string>
    <string name="textMessage">Message</string>
    <string name="imageFoto">TODO</string>
    <string name="textAbout">About Me</string>
    <string name="textKata">Hai, Perkenalkan nama saya Rachmawati. Saya adalah seseorang yang mengagumi senja, karena menurut saya dengan melihat senja saya bisa merasakan ketenangan terlepas dari semua hiruk pikuk yang ada.</string>
    <string name="textCont">Contact Me</string>
    <string name="imageWa">TODO</string>
    <string name="textWa">+62 897–8416–484</string>
    <string name="textEmail">rachmawatidariwulan@gmail.com</string>
    <string name="textInsta">Itsracha07</string>
    <string name="imageEmail">TODO</string>
    <string name="imageInsta">TODO</string>
    <string name="edit_message">Enter a message</string>
    <string name="textGiveMessage">Give Your Message Here</string>
    <string name="buttonSend">Send</string>
    <string name="textYourMessage">Your Message Here</string>
    <string name="textThis">This Is Your Message</string>
    <string name="textMyProfile">My Profile</string>
    <string name="imageMe">TODO</string>
    <string name="textNama">Nama : Rachmawati</string>
    <string name="textNim">Nim : 203110036</string>
    <string name="textProdi">Prodi : RPLA</string>
    <string name="textJenjang">Jenjang : D3</string>
    <string name="imageGrass">TODO</string>
    <string name="imageCloudyy">TODO</string>
    <string name="imageRumput">TODO</string>
    <string name="imageGolden">TODO</string>
    <string name="imageBungaVek">TODO</string>
    <string name="imageBunga">TODO</string>
    <string name="imageFlower">TODO</string>
    <string name="imageKupu">TODO</string>
    <string name="imageRanting">TODO</string>
    <string name="imageSun">TODO</string>
    <string name="buttonHome">Home</string>
    <string name="buttonHomeAbout">Home</string>
    <string name="buttonHomeContact">Home</string>
    <string name="buttonHomeMessage">Home</string>
    <string name="buttonBack">Back</string>
    <string name="imageSakura">TODO</string>
    <string name="imagePurpleFlo">TODO</string>
    <string name="imageFoGrass">TODO</string>
    <string name="imageSulurA">TODO</string>
    <string name="imageSulurB">TODO</string>
    <string name="imageFloGrass">TODO</string>
    <string name="imageBiruKupu">TODO</string>
    <string name="imageTulip">TODO</string>
    <string name="imagePinkSakura">TODO</string>
    <string name="imageGreenGrass">TODO</string>
    <string name="imageTulipPink">TODO</string>
    <string name="imagePinkTulip">TODO</string>
    <string name="imageGrassFlo">TODO</string>
    <string name="imageTulipRed">TODO</string>
    <string name="imageRantingSakura">TODO</string>
    <string name="imageSakuraGugur">TODO</string>
    <string name="bungaBiru">TODO</string>
    <string name="imageSakuraKuning">TODO</string>

</resources>